WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155605
Find-in-page indicator in Mail viewer is the wrong scale and cut off
https://bugs.webkit.org/show_bug.cgi?id=155605
Summary
Find-in-page indicator in Mail viewer is the wrong scale and cut off
Tim Horton
Reported
2016-03-17 15:31:00 PDT
Find-in-page indicator in Mail viewer is the wrong scale and cut off
Attachments
Patch
(4.62 KB, patch)
2016-03-17 15:33 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-03-17 15:33:00 PDT
Created
attachment 274332
[details]
Patch
WebKit Commit Bot
Comment 2
2016-03-17 15:34:49 PDT
Attachment 274332
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/FindInPage.mm:127: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/FindInPage.mm:131: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2016-03-17 17:50:50 PDT
Comment on
attachment 274332
[details]
Patch Clearing flags on attachment: 274332 Committed
r198363
: <
http://trac.webkit.org/changeset/198363
>
WebKit Commit Bot
Comment 4
2016-03-17 17:50:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug