Source/WebKit2/UIProcess/mac/WKTextFinderClient.mm
@@ -248,8 +248,11 @@ static RetainPtr<NSArray> arrayFromRects(const Vector<IntRect>& matchRects)
     if (_imageReplyCallbacks.isEmpty())
         return;
 
+    IntSize size = image->bitmap()->size();
+    size.scale(1 / _page->deviceScaleFactor());
+
     auto imageCallback = _imageReplyCallbacks.takeFirst();
-    imageCallback([[[NSImage alloc] initWithCGImage:image->bitmap()->makeCGImage().get() size:NSZeroSize] autorelease]);
+    imageCallback(adoptNS([[NSImage alloc] initWithCGImage:image->bitmap()->makeCGImage().get() size:size]).get());
 }
 
 #pragma mark - WKTextFinderMatch callbacks
